frontend/shared/scss/base/text-styles.scss
/* ... */
.style-price-big {
    font-size: 20px;
    line-height: 1.4;
    font-weight: $font-weight-semibold;
    color: $color-primary;
}

.style-statistic {
    font-size: 28px;
    line-height: 1.4;
    font-weight: $font-weight-semibold;
    color: $color-primary;

    + .style-description-small {
        margin-top: 0;
    }
}

.style-interactive-small {
    font-size: 14px;
    font-weight: $font-weight-semibold;
    color: $color-gray-text;

    @media (max-width: 400px) {
        font-size: 13px;
    }
}

.style-input {
    font-size: 15px;
    font-weight: $font-weight-default;
    line-height: 1.2;

    @media (max-width: 400px) {
        // Fix zoom on mobile devices
        font-size: 16px;
    }
}

.style-input-box {
    border: $border-width solid $color-border;
    background: $color-background;
    border-radius: $border-radius;
    transition: border-color 0.2s;
    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1);
    
    &:focus,
    &:focus-within {
        border-color: $color-primary;
        box-shadow: 0 0 0 1px $color-primary;
    }
}


.style-button {
    font-size: 16px;
    font-weight: $font-weight-semibold;
}

.style-button-small {
    font-size: 15px;
    font-weight: $font-weight-semibold;

    @media (max-width: 450px) {
        font-size: 16px;
    }
}

.style-button-smaller {
    @extend .style-button-small;
    font-weight: $font-weight-medium;

    @media (max-width: 450px) {
        font-size: 15px;
    }
}

.style-label {
    font-size: 14px;
    font-weight: $font-weight-semibold;
    display: block;
}

.style-table-head {
    font-size: 15px;
    font-weight: $font-weight-semibold;
}

.style-context-menu-item {
    font-size: 13px;
    font-weight: $font-weight-semibold;

    @media (max-width: 450px) {
        font-size: 15px;
        font-weight: $font-weight-default;
    }
}

.style-context-menu-item-description {
    font-size: 13px;
    font-weight: $font-weight-default;
    opacity: 0.5;
    font-variation-settings: 'opsz' 19;
    white-space: wrap;
    line-height: 1.5;
}

.style-definition-term {
    font-size: 14px;
    font-weight: $font-weight-default;
    line-height: 1.5;
    color: $color-gray-text;

    @media (max-width: 550px) {
        font-size: 13px;
    }
}

.style-definition-description {
    @extend .style-description-small;
    color: $color-dark;

    font-size: 15px;
}

.style-cover-photo {
    border-radius: $border-radius;
    margin-bottom: 30px;
}

.style-button-bar {
    display: flex;
    flex-direction: row;
    gap: 15px;
    margin-top: 10px;
    align-items: center;
    flex-wrap: wrap;

    &.right-align {
        justify-content: flex-end;
    }

    &> *.primary:first-child {
        margin-right: 10px;
    }

    hr + & {
        margin-top: -15px;
    }
}

.style-form-buttons {
    display: flex;
    flex-direction: column;
    gap: 7px;
}

.style-description-small + .style-button-bar {
    margin-top: 10px;
}

.style-with-button {
    display: flex;
    flex-direction: row;

    &> *:first-child {
        flex-grow: 1;
        text-align: left;
    }

    &> *:last-child {
        flex-shrink: 0;
        margin-top: -13px;

        display: flex;
        flex-direction: row;
        align-items: center;

        > * {
            margin: 0 10px;

            &.button.text {
                margin: -5px 10px;
            }

            &:last-child {
                margin-right: 0;
            }
        }
    }
}

.radio-description {
    display: block;
    @extend .style-description-small;
}

.style-copyable {
    position: relative;
    width: max-content;
    cursor: pointer;
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    user-select: none;
    
    &:before {
        content: '';
        position: absolute;
        top: -6px;
        left: -6px;
        right: -6px;
        bottom: -6px;
        border-radius: $border-radius;
        background: transparent;
        border: 2px solid $color-primary-background;
        z-index: -1;
        opacity: 0;
        transition: opacity 0.2s;
    }

    @media (hover: hover) {
        &:after {
            content: '';
            position: absolute;
            top: -3px;
            left: -6px;
            right: -6px;
            bottom: -3px;
            border-radius: $border-radius;
            background: black;
            z-index: 1000;
            opacity: 0;
            transition: opacity 0.2s;
        }

        &:hover:after {
            opacity: 0.05;
        }
    }

    &.copied {
        color: $color-primary;

        &:before {
            opacity: 1;
        }

        &:after {
            opacity: 0;
        }
    }
}

.style-hover-area {
    position: relative;
    width: max-content;
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    user-select: none;
    
    &:before {
        content: '';
        position: absolute;
        top: -6px;
        left: -6px;
        right: -6px;
        bottom: -6px;
        border-radius: $border-radius;
        background: transparent;
        border: 2px solid $color-primary-background;
        z-index: -1;
        opacity: 0;
        transition: opacity 0.2s;
    }

    @media (hover: hover) {
        &:after {
            content: '';
            position: absolute;
            top: -3px;
            left: -6px;
            right: -6px;
            bottom: -3px;
            border-radius: $border-radius;
            background: black;
            z-index: 1000;
            opacity: 0;
            transition: opacity 0.2s;
        }

        &:hover:after {
            opacity: 0.05;
        }
    }
}

.style-tooltip {
    cursor: help;
    @extend .style-hover-area;
}
/* ... */

